depl-pv-nfs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mt
  labels:
    app.kubernetes.io/name: mt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mt
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: vol1
          mountPath: /out
      volumes:
        - name: vol1
          persistentVolumeClaim:
            claimName: pvc-nfs
