ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: multitool-ds
#  namespace: kube-system
  labels:
    k8s-app: multitool-ds
spec:
  selector:
    matchLabels:
      name: multitool-ds
  template:
    metadata:
      labels:
        name: multitool-ds
    spec:
#      tolerations:
#      - key: node-role.kubernetes.io/control-plane
#        operator: Exists
#        effect: NoSchedule
#      - key: node-role.kubernetes.io/master
#        operator: Exists
#        effect: NoSchedule
      containers:
      - name: multitool
        image: wbitt/network-multitool
        volumeMounts:
        - name: varlog
          mountPath: /var/log
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
