mt-sep.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-separate
  labels:
    app.kubernetes.io/name: multitool-separate
spec:
  containers:
  - name: multitool-separate
    image: wbitt/network-multitool
    ports:
      - containerPort: 8080
        name: multitool-8080
      - containerPort: 8443
        name: multitool-8443
