depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: http-web-svc
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: multitool-8080
        - containerPort: 8443
          name: multitool-8443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx
    ports:
    - name: http-nginx-port
      protocol: TCP
      port: 2080
      targetPort: http-web-svc

#    app.kubernetes.io/name: multitool
#    ports:
#    - name: http-multitool-port
#      protocol: TCP
#      port: 1080
#      targetPort: multitool-8080
#    - name: https-multitool-port
#      protocol: TCP
#      port: 1443
#      targetPort: multitool-8443
