netology-pod-svc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netology-web
spec:
  containers:
  - name: netology-web
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    app.kubernetes.io/name: netology-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
