node.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-multitool
  ports:
    - name: node-tcp-nginx
      port: 9001
      targetPort: 9001
      nodePort: 30007
    - name: node-tcp-mt
      port: 9002
      targetPort: 9002
      nodePort: 30008
