svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - name: http-nginx-port
      protocol: TCP
      port: 2080
      targetPort: http-web-svc
