ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-mt-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-multitool
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nginx-multitool
            port:
              number: 9002
