net-clokub.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: app
  labels:
    name: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  labels:
    app.kubernetes.io/name: multitool-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: multitool-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: multitool-frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8081
          name: multitool-8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app.kubernetes.io/name: multitool-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: multitool-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: multitool-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8082
          name: multitool-8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app
  labels:
    app.kubernetes.io/name: multitool-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: multitool-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: multitool-cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8083
          name: multitool-8083
---
apiVersion: v1
kind: Service
metadata:
  name: multitool-service-frontend
  namespace: app
spec:
  selector:
    app.kubernetes.io/name: multitool-frontend
  ports:
    - name: http-multitool-port-frontend
      protocol: TCP
      port: 9001
      targetPort: multitool-8081

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-service-backend
  namespace: app
spec:
  selector:
    app.kubernetes.io/name: multitool-backend
  ports:
    - name: http-multitool-port-backend
      protocol: TCP
      port: 9002
      targetPort: multitool-8082

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-service-cache
  namespace: app
spec:
  selector:
    app.kubernetes.io/name: multitool-cache
  ports:
    - name: http-multitool-port-cache
      protocol: TCP
      port: 9003
      targetPort: multitool-8083

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: multitool-cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: multitool-backend
      ports:
        - port: 9003
